Add notebook file to the repo

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10212,7 +10212,7 @@
     "visualizer = PredictionError(dt_model)\n",
     "visualizer.fit(x_train, y_train)\n",
     "visualizer.score(x_test, y_test)\n",
-    "visualizer.poof();"
+    "visualizer.poof()"
    ]
   },
   {
